# rusty-librarian

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  google_books_example.json  index.html
pages/: bookpage.html  dashboard.html  index.html  scanner.html  search.html
src/: bookschema.rs  dbstructs.rs  http_errors.rs  main.rs
static/css/: bookpage.css  dashboard.css  index.css  main.css  scanner.css
static/js/: bookpage.js  camfeed.js  common.js  dashboard.js  index.js  scanner.js  search.js
