[package]
name = "librarian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"]}
actix-files = "0.6.2"
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = { version = "0.11", features = ['json', 'blocking'] }
mongodb = "2.3.1"